--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Encriptador de Texto</title>
     <link rel="shortcut icon" href="Img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css"/>
-    <script src="https://unpkg.com/sweetalert2/dist/sweetalert.min.js">    </script>
+   
 </head>
 <body>
     <div class="container">
-        <img src="Img/Logo.svg" alt="" id="img-alura" >
+        <img src="img/alura.png" alt="" id="img-alura" >
         <div class = "encriptar"> 
             <textarea placeholder="     Ingrese texto aquí" name="texto" class="texto" id="texto" cols="30" rows="10"></textarea>
         </div>
