--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
-    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css"/>
    
 </head>
@@ -27,7 +27,7 @@
             </div>
     </div>
     <div class="encriptado">
-        <img src="img/riddler.png" alt="" id="img-des">
+        <img src="./img/riddler.png" alt="" id="img-des">
         <div class="mensaje-encriptado" id="mensaje-encriptado">
             <h2 id="titulo-msj">Ningún mensaje fue encontrado</h2>
             <p id="parrafo">Ingresa el texto que desea encriptar o desincriptar</p>
